# AquaApi

./: README.md  pyproject.toml
src/: app.py  helpers.py  parsers.py  responses.py
src/views/: get.py  login.py  put.py  register.py  token.py
